# AzureSphereDevX

./: .gitclonecount  .gitclonetimestamp  .gitignore  .gitmodules  .repo_stats_timestamp  .stats_timestamp  CMakeLists.txt  README.md
.github/workflows/: keepalive.yml  metrics.yml
examples/: README.md
examples/DevX-Generator/: app.json  generator.py
examples/DevX-Generator/templates/: direct_method_handler.c.template  footer.c.template  timer_oneshot_handler.c.template
examples/DevX_Generated/: app_manifest.json  declarations.h  main.c
examples/DevX_Generator/: app.json  app.schema.json  app_model.json  app_model.schema.json  app_v2.json  app_v3.json  clean_generated_code.py  generator.py  generator_v2.py  generator_v3.py  main.c  test.py  watcher.py
examples/DevX_Generator/builders/: device_twin.py  direct_methods.py  general_bindings.py  gpio_in_bindings.py  gpio_out_bindings.py  timer_bindings.py
examples/DevX_Generator/templates/: comment_bindings_device_twin.template  comment_bindings_direct_method.template  comment_bindings_gpio.template  comment_bindings_timer.template  comment_block_device_twin.template  comment_block_direct_method.template  comment_block_general.template  comment_block_gpio.template  comment_block_timer.template  declarations.template  declarations_footer.template  declare_bindings_device_twin.template  declare_bindings_direct_method.template  declare_bindings_gpio.template  declare_bindings_timer.template  declare_device_twin.template  declare_device_twin_with_handler.template  declare_direct_method.template  declare_gpio_input.template  declare_gpio_output.template  declare_publish.template  declare_timer_oneshot.template  declare_timer_periodic.template  device_twin.template  device_twin_handler.c.template  device_twin_usage_boolean.template  device_twin_usage_double.template  device_twin_usage_float.template  device_twin_usage_integer.template  device_twin_usage_string.template  direct_method.template  footer.c.template  footer.template  gpio_input.template  gpio_output.template  handler_device_twin_bool.template  handler_device_twin_double.template  handler_device_twin_float.template  handler_device_twin_int.template  handler_device_twin_string.template  (+14 more)
examples/HardwareDefinitions/avnet_mt3620_sk/: azure_sphere_learning_path.json
examples/HardwareDefinitions/avnet_mt3620_sk_rev2/: azure_sphere_learning_path.json
examples/avnet_send_message/: CMakeLists.txt  README.md  app_exit_codes.h  app_manifest.json  main.c
examples/azure_end_to_end/: CMakeLists.txt  README.md  app_manifest.json  main.c
examples/azure_send_message/: CMakeLists.txt  README.md  main.c
examples/deferred_update/: .clang-format  CMakeLists.txt  README.md  app_exit_codes.h  app_manifest.json  main.c
examples/device_twins/: CMakeLists.txt  README.md  app_manifest.json  main.c
examples/direct_methods/: CMakeLists.txt  README.md  app_manifest.json  main.c
examples/gpio_example/: CMakeLists.txt  README.md  app_manifest.json  main.c
examples/intercore_example/: README.md
examples/intercore_example/HighLevelApp/: CMakeLists.txt  app_exit_codes.h  app_manifest.json  launch.vs.json  main.c
examples/intercore_example/IntercoreContract/: intercore_contract.h
examples/intercore_example/RealTimeAppOne/: .gitignore  CMakeLists.txt  app_manifest.json  launch.vs.json  linker.ld  main.c
examples/intercore_example/RealTimeAppTwo/: CMakeLists.txt  app_manifest.json  intercore.c  intercore.h  launch.vs.json  main.c
examples/monitor_memory_usage/: CMakeSettings.json  README.md  app_exit_codes.h  app_manifest.json  main.c  main.h
examples/send_message/: .clang-format  app_manifest.json  main.c
examples/starter_project/: README.md  app_manifest.json  main.c  main.h
examples/terminate_example/: README.md
examples/timer_example/: CMakeLists.txt  README.md  app_manifest.json  main.c
examples/uart_example/: CMakeLists.txt  README.md  app_manifest.json  main.c
examples/utilities/: README.md
include/: dx_async.h  dx_avnet_iot_connect.h  dx_azure_iot.h  dx_deferred_update.h  dx_device_twins.h  dx_direct_methods.h  dx_exit_codes.h  dx_gpio.h  dx_intercore.h  dx_proxy.h  dx_pwm.h  dx_terminate.h  dx_timer.h  dx_uart.h  dx_utilities.h  dx_version.h
src/: dx_async.c  dx_avnet_iot_connect.c  dx_azure_iot.c  dx_config.c  dx_deferred_update.c  dx_device_twins.c  dx_direct_methods.c  dx_gpio.c  dx_i2c.c  dx_intercore.c  dx_json_serializer.c  dx_proxy.c  dx_pwm.c  dx_terminate.c  dx_timer.c  dx_uart.c  dx_utilities.c
(+2 files in other folders)
